--- a/style.css
+++ b/style.css
@@ -1,11 +1,10 @@
 body {
   margin: 0;
+
   font-family: "Open Sans", sans-serif;
-  background: linear-gradient(
-    90deg,
-    rgb(227, 255, 248, 0) 82.08%,
-    rgb(227, 255, 248, 0.38) 100%
-  );
+
+  background: linear-gradient(180deg, rgb(227, 255, 248, 0) 82.08%, rgb(227, 255, 248, 0.38) 100%);
+
   min-height: 100vh;
 }
 
@@ -15,7 +14,7 @@ body {
   padding-top: 65px;
 }
 
-nav {
+.nav {
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -23,10 +22,10 @@ nav {
   margin-bottom: 55px;
 }
 
-ul {
+.list {
   display: flex;
-  list-style: none;
   gap: 48px;
+  list-style: none;
   margin: 0;
   padding: 0;
 }
@@ -36,27 +35,27 @@ a {
   text-decoration: none;
 }
 
-ul li a {
-  opacity: 0.5;
+.list .item a {
+    opacity: 0.5;
 }
 
-ul li a:hover {
+.list .item a:hover {
   font-weight: bold;
   opacity: 1;
 }
 
-h1,
-ul {
+.list,
+.title {
   font-family: "Mulish", sans-serif;
 }
 
-main {
+.main {
   display: flex;
   align-items: center;
   justify-content: space-between;
 }
 
-h1 {
+.title {
   font-size: 49px;
   line-height: 56px;
   color: #1f1534;
@@ -66,13 +65,12 @@ h1 {
   width: 490px;
 }
 
-h1 span {
+.title span {
   color: #89c5cc;
   font-weight: bold;
 }
 
-section p {
-  width: 438px;
+.subtitle {
   font-size: 14px;
   line-height: 28px;
   color: #7d7987;
@@ -80,14 +78,17 @@ section p {
   margin: 40px 0;
 }
 
-button {
+.button {
   color: white;
   text-transform: uppercase;
   font-family: "Open Sans", sans-serif;
-  background: #69b99d;
+
+  background: #69B99D;
   border: 0;
-  padding: 16px 32px 15px;
+  padding: 14px 32px 15px;
+
   display: flex;
+  align-items: center;
   justify-content: center;
   gap: 10px;
 
@@ -96,25 +97,21 @@ button {
   cursor: pointer;
 }
 
-button:hover {
-  background: #4ea788;
-}
-
-footer {
+.footer {
   font-size: 14px;
   line-height: 28px;
 
   text-align: center;
 
-  margin-top: 82px;
+  margin-top: 80px;
 }
 
-footer a {
+.footer a {
   font-weight: bold;
 }
 
 #balls {
-  position: fixed;
-  bottom: 0;
-  right: 0;
+    position: fixed;
+    bottom: 0;
+    right: 0;
 }
